# VANMOKUM-configurator-V1

./: Frontend Wordpress Frame HTML code  README.md  main.py  pyproject.toml
app/: api.py  cache.py  codec.py  schema.py  settings.py
app/builder/: build.py  exporter.py  geometry.py  library.py  materials.py
models/pendants/: Alki.3dm  Allyn.3dm  Ausi12.3dm  Ausi14.3dm  Ausi8.3dm  Bell10.3dm  Bell16.3dm  Disc16.3dm  Disc20.3dm  Disc24.3dm  Drop18.3dm  Drop26.3dm  Hive12.3dm  Hive15.3dm  Hive9.3dm  Madison.3dm  Moon10.3dm  Moon14.3dm  Moon18.3dm  Nest24.3dm  Nest32.3dm
